<resources>
    <string name="app_name">Film Night</string>

    <string name="enterName">What is your full name?</string>
    <string name="enterEmail">What is your email address?</string>
    <string name="enterDOB">When were you born? (DD/MM/YYYY)</string>
    <string name="enterHouseNumber">What is your house number/name?</string>
    <string name="enterPostCode">What is your postcode?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="searchFilmQ">What film do you want to watch?</string>
    <string name="searchGenreQ">If you don\'t have a specific film in mind, what genre of film do you want to watch?</string>
    <string name="searchStatement">I want to watch </string>
    <string name="searchStatement_alt">I want to watch a(n) </string>
    <string name="searchStatementTag"> film!</string>

    <string name="filmListInst">Select the film you are going to watch:</string>
    <string name="filmListInstTag">[This will auto-fill some event info]</string>

    <string name="filmNameFiller">Title</string>
    <string name="filmYearFiller">Year</string>
    <string name="filmPlotFiller">Plot</string>
    <string name="filmGenreFiller">Genre</string>
    <string name="filmLanguageFiller">Language</string>


    <string name="enterAddress">What is your address?</string>
    <string name="enterArrivalTime">When should people arrive?</string>
    <string name="enterEventDate">What day is your film night?</string>
    <string name="enterNumGuests">How many guest do you want?</string>

    <string name="ageRangeTitle">Select an age range.</string>

    <string name="foodRadTitle">Food?</string>
    <string name="drinkRadTitle">Drinks?</string>

    <string name="no">No.</string>
    <string name="byo">Bring your own.</string>
    <string name="supplied">Will be supplied.</string>

    <string name="vegetarianQ">Vegetarian?</string>
    <string name="veganQ">Vegan?</string>
    <string name="alcoholAllowed">Alcohol?</string>

    <string name="submit">Submit</string>

</resources>
