<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/eventForm_container_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            android:id="@+id/eventForm_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/eventForm_form_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/eventForm_poster_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/eventForm_filmTitle_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filmNameFiller"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                <LinearLayout
                    android:id="@+id/eventForm_filmDetails_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/eventForm_filmInfo_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/eventForm_filmYear_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/filmYearFiller" />

                        <TextView
                            android:id="@+id/eventForm_filmGenre_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/filmGenreFiller" />

                        <TextView
                            android:id="@+id/eventForm_filmLanguage_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/filmLanguageFiller" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/eventForm_filmPlot_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:scrollbars="horizontal"
                        android:text="@string/filmPlotFiller" />

                </LinearLayout>

                <EditText
                    android:id="@+id/eventForm_hostName_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="false"
                    android:text="Name" />

                <EditText
                    android:id="@+id/eventForm_hostAddress_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="4"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:selectAllOnFocus="true"
                    android:singleLine="false"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="false"
                    android:text="@string/enterAddress" />

                <EditText
                    android:id="@+id/eventForm_numGuests_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="false"
                    android:text="@string/enterNumGuests" />

                <EditText
                    android:id="@+id/eventForm_eventTime_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="false"
                    android:text="@string/enterArrivalTime" />

                <EditText
                    android:id="@+id/eventForm_eventDate_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="false"
                    android:text="@string/enterEventDate" />

                <TextView
                    android:id="@+id/eventForm_ageRangeTitle_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ageRangeTitle" />

                <LinearLayout
                    android:id="@+id/eventForm_ageRange_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/eventForm_ageRangeMinSel_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:layout_weight="2"
                        android:inputType="number" />

                    <com.innovattic.rangeseekbar.RangeSeekBar
                        android:id="@+id/eventForm_ageRange_range"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:rsb_max="100"
                        app:rsb_minRange="16"
                        android:layout_weight="1"
                        app:rsb_trackColor="@color/colorPrimary"
                        app:rsb_trackSelectedColor="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/eventForm_ageRangeMaxSel_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:layout_weight="2"
                        android:inputType="number" />
                </LinearLayout>

                <TextView
                    android:id="@+id/eventForm_foodQ_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/foodRadTitle" />

                <RadioGroup
                    android:id="@+id/eventForm_foodRadioGroup_radGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/eventForm_noFood_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no" />

                    <RadioButton
                        android:id="@+id/eventForm_byoFood_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/byo" />

                    <RadioButton
                        android:id="@+id/eventForm_supFood_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/supplied" />

                </RadioGroup>

                <CheckBox
                    android:id="@+id/eventForm_vegetarian_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vegetarianQ" />

                <CheckBox
                    android:id="@+id/eventForm_vegan_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/veganQ" />

                <TextView
                    android:id="@+id/eventForm_drinksQ_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drinkRadTitle" />

                <RadioGroup
                    android:id="@+id/eventForm_drinksRadioGroup_radGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/eventForm_noDrinks_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no" />

                    <RadioButton
                        android:id="@+id/eventForm_byoDrinks_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/byo" />

                    <RadioButton
                        android:id="@+id/eventForm_supDrinks_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/supplied" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/eventForm_alcohol_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alcoholAllowed" />

                <Button
                    android:id="@+id/eventForm_submit_butt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>